<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1E1E1E">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            tools:ignore="UselessParent">
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:id="@+id/top_current_now"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1E1E1E"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textSize="33sp"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/present"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:id="@+id/present"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/status"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:id="@+id/status"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/percentage"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:id="@+id/percentage"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/current_now"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:id="@+id/current_now"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/charge_counter"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:id="@+id/charge_counter"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/plugged_in"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:id="@+id/plugged_in"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/voltage"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:id="@+id/voltage"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/temperature"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:id="@+id/temperature"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/health"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:id="@+id/health"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="2dp">
                <TextView
                    android:background="@color/columnTwo"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/technology"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:background="@color/columnOne"
                    android:gravity="center"
                    android:id="@+id/technology"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:text="@string/tilde"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
<!--
#FF7F50
#6495ED
-->
